# credit_card_churn

./: CBO2002 - Ocupacao.csv  Makefile  README.md  case_mep_dados.xlsx  churn.ipynb  cnae.xlsx  pyproject.toml
