[tool.poetry]
name = "churn"
version = "0.1.0"
description = "churn"
authors = ["Marilia Ribeiro da Silva <marilia.ribeirods@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
mlflow = "^2.14.1"
optuna = "^3.6.1"
pandas = "^2.2.2"
plotly = "^5.22.0"
numpy = "<2"
ipykernel = "^6.29.4"
ipython = "^8.25.0"
jupyter = "^1.0.0"
openpyxl = "^3.1.4"
seaborn = "^0.13.2"
lightgbm = "^4.4.0"
xgboost = "^2.1.0"
catboost = "^1.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["churn"]
force_sort_within_sections = true
